Added support for running Pado with Java 9+